# internal/router/router.go
@@ -3,9 +3,10 @@ package router
 import (
 	"github.com/gofiber/fiber/v2"
 
-	"auth-practice/internal/handler/auth"
-	"auth-practice/internal/handler/health"
-	userhandler "auth-practice/internal/handler/user"
+	"technical-test/internal/handler/auth"
+	"technical-test/internal/handler/health"
+	userhandler "technical-test/internal/handler/user"
+	worksheethandler "technical-test/internal/handler/worksheet"
 )
 
 func SetUpRoutes(app *fiber.App) error {
@@ -14,10 +15,15 @@ func SetUpRoutes(app *fiber.App) error {
 	publicRoutes := v1Routes.Group("")
 	publicRoutes.Get("/heath", health.HandleHealth)
 
+	authRoutes := publicRoutes.Group("/auth")
+	authRoutes.Post("/signup", userhandler.HandleCreateUser)
+	authRoutes.Post("/login", auth.HandleSignIn)
+	authRoutes.Get("/logout", auth.HandleSignOut)
+
 	privateRoutes := v1Routes.Group("")
-	privateRoutes.Post("/auth/signup", userhandler.HandleCreateUser)
-	privateRoutes.Post("/auth/login", auth.HandleSignIn)
-	privateRoutes.Get("/auth/logout", auth.HandleSignOut)
+
+	worksheetRoutes := privateRoutes.Group("/worksheet")
+	worksheetRoutes.Get("/", worksheethandler.HandleList)
 
 	return nil
 }
